bpo-31071: Avoid masking original TypeError in call with * unpacking (#2957)

when other arguments are passed.